--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.18.0",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
+    "clsx": "^2.1.1",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -26,6 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "fluid-tailwind": "^1.0.4",
     "slice-machine-ui": "^2.17.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
