--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@slicemachine/adapter-next": "^0.3.81",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "fluid-tailwind": "^1.0.4",
+    "postcss": "^8",
     "slice-machine-ui": "^2.17.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
